# kaggle-cli

./: CHANGELOG.md  pyproject.toml
docs/: benchmarks.md  competition_creation.md  competitions.md  index.rst  search.md
skills/: SKILL.md
skills/references/: auth.md  competitions.md  search.md
src/kaggle/: __init__.py  cli.py
src/kaggle/api/: kaggle_api_extended.py
src/kaggle/models/: kaggle_models_extended.py
src/kaggle/test/: test_benchmarks_cli.py
tests/: unit_tests.py
tests/unit/: conftest.py  test_benchmarks_cli.py  test_cli_competitions.py  test_cli_search.py  test_competition_create_solution.py  test_competition_solution_status.py  test_competition_submission_limits.py  test_competition_submit.py  test_competition_submit_wait.py  test_dataset_download.py  test_dataset_metadata_update.py  test_download_resume.py  test_help_version_auth.py  test_http_client.py  test_kernels_pull.py  test_kernels_push.py  test_parse_duration.py  test_resumable_upload.py  test_retry_after.py  test_search.py  test_upload_helpers.py
